# clinical-trials-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  claude.md  inference.py  openenv.yaml  pyproject.toml
clinical_trial_env/: README.md  __init__.py  client.py  grader.py  models.py  openenv.yaml  pyproject.toml
clinical_trial_env/data/: ground_truth.json  task1_data.json  task2_data.json  task3_data.json
clinical_trial_env/server/: Dockerfile  __init__.py  app.py  clinical_trial_env_environment.py  requirements.txt
server/: __init__.py  app.py
tests/: test_env.py  test_grader.py  test_submission_surface.py
